<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BaseUI</string>
    <!-- 手Q组件涉及到的 -->
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="show_normal_action_sheet">normal mode</string>
    <string name="show_menu_action_sheet">menu mode</string>
    <string name="actionsheet">ActionSheet</string>
    <string name="progressbar">ProgressBar</string>
    <string name="loadingview">LoadingView</string>
    <string name="loading">loading</string>
    <string name="loadingdialog">LoadingDialog</string>
    <string name="changing">正在切换帐号</string>
    <string name="groupmanager_tips_input">请输入分组名</string>
    <string name="toast">Toast</string>
    <string name="tips_of_info">tips of info</string>
    <string name="tips_of_error">tips of error</string>
    <string name="tips_of_ok">tips of ok</string>
    <string name="dialog">Dialog</string>
    <string name="tips_banner">TipsBanner</string>
    <string name="net_error_tip">当前网络不可用，请检查网络设置</string>
    <string name="qr_input_mobile_num">请输入你的手机号码</string>
    <string name="qr_next_step">下一步</string>
    <string name="qr_clause_prefix">我已阅读并同意</string>
    <string name="qr_clause">使用条款和隐私政策</string>
    <string name="form">Form</string>
    <string name="country_code">中国+86</string>
    <string name="enter_password">请输入密码</string>
    <string name="login">登 录</string>
    <string name="listview">ListView</string>
    <string name="share_link_copy">复制链接</string>
    <string name="talkback_copylink">复制链接按钮</string>
    <string name="share_to_friend_circle">朋友圈</string>
    <string name="talkback_friend_circle">分享到微信朋友圈按钮</string>
    <string name="share_to_weixin">微信</string>
    <string name="talkback_wx_friend">分享到微信好友按钮</string>
    <string name="share_to_qq">好友/群</string>
    <string name="talkback_qq">分享到QQ好友或群按钮</string>
    <string name="talkback_qzone">分享到QQ空间按钮</string>
    <string name="share_to_qzone">QQ空间</string>
    <string name="custom_view_mode">custom view mode</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="before_yesterday">前天</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期日</string>
    <string name="before_date">更早</string>
    <string name="daybreak">凌晨</string>
    <string name="morning">早上</string>
    <string name="shangwu">上午</string>
    <string name="afternoon">下午</string>
    <string name="evening">晚上</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="agree">赞</string>
    <string name="reply">回复</string>
    <string name="aio_yesterday">昨天</string>
    <string name="str_refresh_pull">下拉刷新</string>
    <string name="str_refresh_loadding">正在刷新...</string>
    <string name="str_refresh_release">释放立即刷新</string>
    <string name="str_refresh_lasttime">最近更新：</string>
    <string name="str_refresh_failed_retry">刷新失败</string>
    <string name="net_err_busy">网络繁忙</string>
    <string name="blank_refresh_btn">刷新</string>
    <string name="str_refresh_success">刷新成功</string>
    <string name="image">[图片]</string>
    <string name="delete_btn">删除</string>
    <string name="page_while_loading">page while loading</string>
    <string name="loading_tips">正在加载...</string>
    <string name="checkbox">CheckBox</string>
    <string name="common_title_right">搜素</string>
    <string name="monthly_btn_1">包月畅读</string>
    <string name="monthly_btn_2">成长加速</string>
    <string name="monthly_btn_3">点亮图标</string>
    <string name="monthly_btn_4">订阅八折</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_hint_loading_style_4">拼命加载中...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_hint_nonedata">已显示全部</string>
    <string name="xlistview_footer_hint_errordata">加载失败，点击重新加载</string>
    <string name="xlistview_header_hint_loading_huawei">Loading,please wait...</string>

    <string name="search_tip_top">搜索书名、作者名</string>
    <string name="search_tip_top_listen">请输入听书名</string>
    <string name="text_menu_cloud">云书架</string>

    <string name="comment_level_admin">管理员</string>

    <string name="feed_tip_back_to_top">点此回顶部并刷新</string>
    <string name="reader_tip_vote">投票、打赏，力挺作者！</string>
    <string name="reader_tip_offline_download">预先下载离线看</string>
    <string name="reader_tip_nightmode">点击灯绳，\n夜间模式更护眼！</string>
    <string name="unselected">未选择</string>
    <string name="selected_n">已选择 (%1$d)</string>

    <!--add by lulu-->
    <string name="up_down_sliding_brightness">上下滑动屏幕调亮度</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="use_sys_brightness">使用系统亮度</string>
    <string name="update">更新</string>
    <string name="enter_read">进入阅读</string>
    <string name="free_try_read">免费试读</string>
    <string name="keep_reading">继续阅读</string>

    <!--下拉刷新-->
    <string name="refresh_pull_down_label">下拉刷新</string>
    <string name="refresh_pull_up_label">上滑刷新</string>
    <string name="refresh_release_label">释放刷新</string>
    <string name="refresh_refreshing_label">正在加载</string>
    <string name="refresh_finish_label_header">完成刷新</string>
    <string name="refresh_finish_label_footer">完成加载</string>
    <string name="refresh_no_data_label_header">刚刚刷新</string>
    <string name="refresh_no_data_label_footer">到底了，去其它界面看看吧</string>
    <string name="refresh_success_label">同步成功</string>
    <string name="refresh_fail_label">同步失败</string>
    <string name="private_feature_tip">全新上线“私密阅读”功能，保护阅读隐私</string>

    <string name="ink_screen_mode_guide">切换护眼阅读模式\n更好的保护眼睛</string>

    <!--loadMore相关-->
    <string name="load_more_status_loading">正在加载...</string>
    <string name="load_more_status_end">已显示全部</string>
    <string name="load_more_status_fail">加载失败，点击重新加载</string>

    <!--刷新相关-->
    <string name="refresh_pull_down_to_refresh">下拉加载</string>
    <string name="refresh_release_to_refresh">松手加载</string>
    <string name="refresh_refreshing">正在加载…</string>
    <string name="refresh_pre_to_tow_level">松手加载/继续下拉查看详情</string>
    <string name="refresh_release_to_two_level">松手查看详情</string>
    <string name="refresh_last_refresh_time">上次更新时间：</string>
    <string name="utility_minutes_ago">&#160;分钟前</string>
    <string name="utility_seconds_ago">刚刚</string>

    <string name="title_read_time_minute">分钟</string>
    <string name="back">返回</string>
    <string name="back_error">返回失败</string>

    <string name="recommend_books">相似好书</string>

    <!--网络相关-->
    <string name="localstore_check_net">网络未连接，点击重试</string>
    <string name="setting_net">设置网络</string>
    <string name="click_retry">点击重试</string>

    <string name="loading_fail_text">网络开小差了，快点屏幕刷新</string>
    <string name="loading_data_fail_text">数据加载出错了...</string>
    <string name="download_faile">网络异常，请稍后重试</string>
    <string name="setting_network">设置网络</string>
    <string name="accounts_loading">正在登录...</string>
    <string name="loading_word">正在加载...</string>


    <!-- 首页 -->
    <string name="bookshelf">书架</string>
    <string name="bookrecommend">精选</string>
    <string name="bookstack">分类</string>
    <string name="classify">发现</string>
    <string name="web">福利</string>
    <string name="profile">我的</string>
    <string name="notices_open">开启</string>
    <string name="notices_close">关闭</string>
    <string name="menu_image_tag">menu_image_tag</string>
    <string name="menu_text_tag">@null</string>

    <string name="profile_title">我的</string>
</resources>
