<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/refresh_target_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never" />


    <include
        android:id="@+id/loading_view"
        layout="@layout/base_loading_style2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_L5"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <com.qq.reader.view.EmptyView
        android:id="@+id/data_error_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:buttonText="@string/click_retry"
        app:contentText="@string/loading_data_fail_text"
        app:icon="@drawable/detail_load_failed"
        app:reloadText="@string/setting_net"
        app:type="buttonText" />

</androidx.constraintlayout.widget.ConstraintLayout>